2021-04-27  Jonathan Bedard  <jbedard@apple.com>

        Bugzilla needs to linkify identifiers (Part 2)
        https://bugs.webkit.org/show_bug.cgi?id=224312
        <rdar://problem/75845629>

        Reviewed by Aakash Jain.

        * extensions/Commits/Extension.pm:
        (bug_format_comment): Add regex to replace identifiers with a commits.webkit.org link.
        (_replace_reference): This function replaces both revisions and identifiers.
        (_replace_revision): Renamed _replace_reference.

2021-04-23  Jonathan Bedard  <jbedard@apple.com>

        Bugzilla needs to linkify identifiers (Part 1)
        https://bugs.webkit.org/show_bug.cgi?id=224312
        <rdar://problem/75845629>

        Reviewed by Dewei Zhu.

        * extensions/Commits: Moved from Trac.
        * extensions/Commits/Config.pm: Changed Plugin name.
        * extensions/Commits/Extension.pm: Ditto.
        (_replace_revision): Use commit.webkit.org instead of trac.
        * extensions/Trac: Moved to Commits.

2021-01-15  Ling Ho  <lingho@apple.com>

        Bugzilla patch upload no longer displays the agreement for some users
        https://bugs.webkit.org/show_bug.cgi?id=220678

        Reviewed by Alexey Proskuryakov.

        * template/en/default/attachment/patchlegalese.html.tmpl:

2020-06-01  Ling Ho  <lingho@apple.com>

        Show patch IDs in the drop down menu under the Patch Diff Screen
        https://bugs.webkit.org/show_bug.cgi?id=212558

        Reviewed by Alexey Proskuryakov.

        * template/en/default/attachment/diff-header.html.tmpl:

2020-03-17  Aakash Jain  <aakash_jain@apple.com>

        Remove status-bubble iframe from old EWS
        https://bugs.webkit.org/show_bug.cgi?id=209215

        Reviewed by Jonathan Bedard.

        * code-review.js:
        * js/status-bubble.js:
        (handleStatusBubbleLoadNewEWS): Deleted.
        * template/en/default/attachment/edit.html.tmpl: Removed old EWS iframe. 