@@ -1,3 +1,14 @@
+2021-09-02  Jonathan Bedard  <jbedard@apple.com>
+
+        [contributors.json] Relocation (Part 4)
+        https://bugs.webkit.org/show_bug.cgi?id=229690
+        <rdar://problem/82552403>
+
+        Reviewed by Aakash Jain.
+
+        * committers-autocomplete.js: Use metadata/contributors.json.
+        (parseCommittersPy): Parse contributors.json as list instead of dictionary.
+
 2021-04-27  Jonathan Bedard  <jbedard@apple.com>
 
         Bugzilla needs to linkify identifiers (Part 2)
